--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -19,32 +19,31 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          cache: 'pip'
 
-      - name: Install dependencies
+      # Install ADT (Ansible Development Tools bundle)
+      # This ensures ansible-core, ansible-lint, molecule, and other Ansible tools
+      # are compatible versions as recommended by Red Hat
+      - name: Install Ansible Development Tools (ADT)
         run: |
           pip install --upgrade pip
-          pip install pre-commit ansible-lint yamllint detect-secrets
-          pip install black isort flake8 pylint bandit
-
-      - name: Install Ansible
-        run: |
-          pip install ansible-core
+          pip install ansible-dev-tools
+          
+          # Verify installation
+          echo "ADT version:"
+          adt --version
+          echo "Ansible version:"
           ansible --version
+          echo "Ansible-lint version:"
+          ansible-lint --version
 
-      - name: Install gitleaks
-        run: |
-          wget https://github.com/gitleaks/gitleaks/releases/download/v8.18.1/gitleaks_8.18.1_linux_x64.tar.gz
-          tar -xzf gitleaks_8.18.1_linux_x64.tar.gz
-          sudo mv gitleaks /usr/local/bin/
-
-      - name: Cache pre-commit
-        uses: actions/cache@v3
+      # Use official pre-commit action
+      # Handles caching, environment management, and tool installation automatically
+      # Pre-commit will manage: gitleaks, detect-secrets, yamllint, Python linters, etc.
+      - name: Run pre-commit hooks
+        uses: pre-commit/action@v3.0.1
         with:
-          path: ~/.cache/pre-commit
-          key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
-
-      - name: Run pre-commit
-        run: pre-commit run --all-files --show-diff-on-failure --color=always
+          extra_args: --all-files --show-diff-on-failure
 
 
 
