--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -174,7 +174,19 @@ repos:
     hooks:
       - id: collection-structure
         name: Collection Structure Check
-        entry: bash -c 'if [ ! -f galaxy.yml ]; then echo "❌ galaxy.yml not found"; exit 1; fi; required_dirs=("roles" "plugins"); for dir in "${required_dirs[@]}"; do if [ ! -d "$dir" ]; then echo "❌ Required directory not found: $dir"; exit 1; fi; done; echo "✅ Collection structure valid"'
+        entry: |
+          bash -c 'if [ ! -f galaxy.yml ]; then 
+            echo "❌ galaxy.yml not found"
+            exit 1
+          fi
+          required_dirs=("roles" "plugins")
+          for dir in "${required_dirs[@]}"; do 
+            if [ ! -d "$dir" ]; then 
+              echo "❌ Required directory not found: $dir"
+              exit 1
+            fi
+          done
+          echo "✅ Collection structure valid"'
         language: system
         pass_filenames: false
         always_run: true
@@ -186,7 +198,8 @@ repos:
     hooks:
       - id: galaxy-validation
         name: Galaxy.yml Validation
-        entry: bash -c 'if [ -f galaxy.yml ]; then python3 -c "import yaml; yaml.safe_load(open(\"galaxy.yml\"))" || { echo "❌ Invalid galaxy.yml"; exit 1; }; fi'
+        entry: |
+          bash -c 'if [ -f galaxy.yml ]; then python3 -c "import yaml; yaml.safe_load(open(\"galaxy.yml\"))" || { echo "❌ Invalid galaxy.yml"; exit 1; }; fi'
         language: system
         files: ^galaxy\.yml$
         pass_filenames: false
@@ -198,7 +211,8 @@ repos:
     hooks:
       - id: version-consistency
         name: Version Consistency Check
-        entry: bash -c 'if [ -f galaxy.yml ]; then galaxy_version=$(grep "^version:" galaxy.yml | awk "{print \$2}"); echo "Galaxy version: $galaxy_version"; if [ -f CHANGELOG.rst ]; then if ! grep -q "$galaxy_version" CHANGELOG.rst; then echo "⚠️  WARNING: Version $galaxy_version not found in CHANGELOG.rst"; fi; fi; fi'
+        entry: |
+          bash -c 'if [ -f galaxy.yml ]; then galaxy_version=$(grep "^version:" galaxy.yml | awk "{print \$2}"); echo "Galaxy version: $galaxy_version"; if [ -f CHANGELOG.rst ]; then if ! grep -q "$galaxy_version" CHANGELOG.rst; then echo "⚠️  WARNING: Version $galaxy_version not found in CHANGELOG.rst"; fi; fi; fi'
         language: system
         files: ^galaxy\.yml$
         pass_filenames: false
@@ -210,7 +224,8 @@ repos:
     hooks:
       - id: role-naming
         name: Role Naming Convention
-        entry: bash -c 'for f in "$@"; do if [[ "$f" =~ ^roles/([^/]+) ]]; then role_name="${BASH_REMATCH[1]}"; if [[ ! "$role_name" =~ ^[a-z][a-z0-9_]*$ ]]; then echo "❌ Invalid role name: $role_name"; echo "Must be lowercase, alphanumeric, underscores only"; exit 1; fi; fi; done'
+        entry: |
+          bash -c 'for f in "$@"; do if [[ "$f" =~ ^roles/([^/]+) ]]; then role_name="${BASH_REMATCH[1]}"; if [[ ! "$role_name" =~ ^[a-z][a-z0-9_]*$ ]]; then echo "❌ Invalid role name: $role_name"; echo "Must be lowercase, alphanumeric, underscores only"; exit 1; fi; fi; done'
         language: system
         files: ^roles/
         pass_filenames: true
@@ -222,7 +237,8 @@ repos:
     hooks:
       - id: module-naming
         name: Module Naming Convention
-        entry: bash -c 'for f in "$@"; do if [[ "$f" =~ plugins/modules/([^/]+)\.py$ ]]; then module_name="${BASH_REMATCH[1]}"; if [[ ! "$module_name" =~ ^[a-z][a-z0-9_]*$ ]]; then echo "❌ Invalid module name: $module_name"; echo "Must be lowercase, alphanumeric, underscores only"; exit 1; fi; fi; done'
+        entry: |
+          bash -c 'for f in "$@"; do if [[ "$f" =~ plugins/modules/([^/]+)\.py$ ]]; then module_name="${BASH_REMATCH[1]}"; if [[ ! "$module_name" =~ ^[a-z][a-z0-9_]*$ ]]; then echo "❌ Invalid module name: $module_name"; echo "Must be lowercase, alphanumeric, underscores only"; exit 1; fi; fi; done'
         language: system
         files: ^plugins/modules/.*\.py$
         pass_filenames: true
@@ -234,7 +250,8 @@ repos:
     hooks:
       - id: module-documentation
         name: Module Documentation Check
-        entry: bash -c 'for f in "$@"; do if [[ "$f" == plugins/modules/*.py ]] && [[ "$f" != *__init__.py ]]; then if ! grep -q "DOCUMENTATION = " "$f"; then echo "⚠️  WARNING: Module missing DOCUMENTATION: $f"; fi; if ! grep -q "EXAMPLES = " "$f"; then echo "⚠️  WARNING: Module missing EXAMPLES: $f"; fi; if ! grep -q "RETURN = " "$f"; then echo "⚠️  WARNING: Module missing RETURN: $f"; fi; fi; done'
+        entry: |
+          bash -c 'for f in "$@"; do if [[ "$f" == plugins/modules/*.py ]] && [[ "$f" != *__init__.py ]]; then if ! grep -q "DOCUMENTATION = " "$f"; then echo "⚠️  WARNING: Module missing DOCUMENTATION: $f"; fi; if ! grep -q "EXAMPLES = " "$f"; then echo "⚠️  WARNING: Module missing EXAMPLES: $f"; fi; if ! grep -q "RETURN = " "$f"; then echo "⚠️  WARNING: Module missing RETURN: $f"; fi; fi; done'
         language: system
         files: ^plugins/modules/.*\.py$
         pass_filenames: true
@@ -246,7 +263,8 @@ repos:
     hooks:
       - id: molecule-tests
         name: Molecule Tests Check
-        entry: bash -c 'for role_dir in roles/*; do if [ -d "$role_dir" ] && [ ! -d "$role_dir/molecule" ]; then echo "⚠️  WARNING: Role $(basename $role_dir) has no molecule tests"; fi; done'
+        entry: |
+          bash -c 'for role_dir in roles/*; do if [ -d "$role_dir" ] && [ ! -d "$role_dir/molecule" ]; then echo "⚠️  WARNING: Role $(basename $role_dir) has no molecule tests"; fi; done'
         language: system
         pass_filenames: false
         always_run: true
@@ -258,7 +276,8 @@ repos:
     hooks:
       - id: idempotency-check
         name: Idempotency Check
-        entry: bash -c 'for f in "$@"; do if grep -E "shell:|command:|raw:" "$f" | grep -v "creates:\|removes:\|changed_when: false\|check_mode:" | grep -v "^#" | grep -v "molecule/"; then echo "⚠️  WARNING: Potentially non-idempotent task in $f"; echo "Consider using creates/removes or changed_when for shell/command"; fi; done'
+        entry: |
+          bash -c 'for f in "$@"; do if grep -E "shell:|command:|raw:" "$f" | grep -v "creates:\|removes:\|changed_when: false\|check_mode:" | grep -v "^#" | grep -v "molecule/"; then echo "⚠️  WARNING: Potentially non-idempotent task in $f"; echo "Consider using creates/removes or changed_when for shell/command"; fi; done'
         language: system
         files: ^roles/.*/tasks/.*\.yml$
         pass_filenames: true
@@ -270,7 +289,8 @@ repos:
     hooks:
       - id: fqcn-check
         name: FQCN Usage Check
-        entry: bash -c 'for f in "$@"; do if grep -E "^\s+[a-z_]+:\s*$" "$f" | grep -v "ansible.builtin\|myorg.custom_collection" | grep -v "^#" | grep -v "name:\|when:\|register:\|tags:"; then echo "⚠️  WARNING: Consider using FQCN in $f"; fi; done'
+        entry: |
+          bash -c 'for f in "$@"; do if grep -E "^\s+[a-z_]+:\s*$" "$f" | grep -v "ansible.builtin\|myorg.custom_collection" | grep -v "^#" | grep -v "name:\|when:\|register:\|tags:"; then echo "⚠️  WARNING: Consider using FQCN in $f"; fi; done'
         language: system
         files: ^roles/.*/tasks/.*\.yml$
         pass_filenames: true
@@ -282,7 +302,16 @@ repos:
     hooks:
       - id: no-secrets
         name: No Secrets in Collection
-        entry: bash -c 'echo "Checking for secrets..."; for f in "$@"; do if grep -iE "(password|secret|token|api[_-]?key):\s*[\"'\''][^{]" "$f" | grep -v "{{ " | grep -v "^#" | grep -v "_name:" | grep -v "description:" | grep -v "type:"; then echo "❌ VIOLATION: Plain secret found in $f"; echo "Constitution Article V: No secrets in Git"; exit 1; fi; done; echo "✅ No secrets detected"'
+        entry: |
+          bash -c 'echo "Checking for secrets..."
+          for f in "$@"; do 
+            if grep -iE "(password|secret|token|api[_-]?key):\s*[\"'\''][^{]" "$f" | grep -v "{{ " | grep -v "^#" | grep -v "_name:" | grep -v "description:" | grep -v "type:"; then 
+              echo "❌ VIOLATION: Plain secret found in $f"
+              echo "Constitution Article V: No secrets in Git"
+              exit 1
+            fi
+          done
+          echo "✅ No secrets detected"'
         language: system
         files: \.(yaml|yml|py)$
         pass_filenames: true
@@ -294,14 +323,16 @@ repos:
     hooks:
       - id: readme-check
         name: README Exists Check
-        entry: bash -c 'if [ ! -f README.md ]; then echo "❌ README.md not found"; exit 1; fi'
+        entry: |
+          bash -c 'if [ ! -f README.md ]; then echo "❌ README.md not found"; exit 1; fi'
         language: system
         pass_filenames: false
         always_run: true
 
       - id: role-readme-check
         name: Role README Check
-        entry: bash -c 'for role_dir in roles/*; do if [ -d "$role_dir" ] && [ ! -f "$role_dir/README.md" ]; then echo "⚠️  WARNING: Role $(basename $role_dir) has no README.md"; fi; done'
+        entry: |
+          bash -c 'for role_dir in roles/*; do if [ -d "$role_dir" ] && [ ! -f "$role_dir/README.md" ]; then echo "⚠️  WARNING: Role $(basename $role_dir) has no README.md"; fi; done'
         language: system
         pass_filenames: false
         always_run: true
