--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 ---
-# Pre-commit hooks for automation-collection-example repository
-# Ansible Collection - Custom roles, modules, and plugins
+# Pre-commit hooks for aap-config-as-code repository
+# Simplified to only use Gitleaks for secret detection
 #
 # Installation:
 #   pip install pre-commit
@@ -11,328 +11,9 @@
 
 repos:
   # ============================================================================
-  # General Checks - All Files
-  # ============================================================================
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-      # Prevent large files from being committed
-      - id: check-added-large-files
-        args: ['--maxkb=500']
-        
-      # Ensure files end with newline
-      - id: end-of-file-fixer
-        
-      # Remove trailing whitespace
-      - id: trailing-whitespace
-        args: ['--markdown-linebreak-ext=md']
-        
-      # Verify YAML syntax
-      - id: check-yaml
-        
-      # Verify JSON syntax
-      - id: check-json
-        
-      # Check for merge conflict markers
-      - id: check-merge-conflict
-        
-      # Prevent committing to main/master directly
-      - id: no-commit-to-branch
-        args: ['--branch', 'main', '--branch', 'master']
-        
-      # Check case conflicts
-      - id: check-case-conflict
-        
-      # Check Python syntax
-      - id: check-ast
-        
-      # Ensure scripts have proper shebang
-      - id: check-executables-have-shebangs
-        
-      # Check for debugger imports
-      - id: debug-statements
-
-  # ============================================================================
-  # Python Linting - Black (Code Formatter)
-  # ============================================================================
-  - repo: https://github.com/psf/black
-    rev: 23.12.1
-    hooks:
-      - id: black
-        args: ['--line-length=100']
-        language_version: python3
-
-  # ============================================================================
-  # Python Linting - isort (Import Sorter)
-  # ============================================================================
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
-    hooks:
-      - id: isort
-        args: ['--profile', 'black', '--line-length', '100']
-
-  # ============================================================================
-  # Python Linting - flake8
-  # ============================================================================
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-        args:
-          - '--max-line-length=100'
-          - '--extend-ignore=E203,W503'  # Black compatibility
-        files: \.py$
-
-  # ============================================================================
-  # Python Linting - pylint
-  # ============================================================================
-  - repo: https://github.com/PyCQA/pylint
-    rev: v3.0.3
-    hooks:
-      - id: pylint
-        args:
-          - '--max-line-length=100'
-          - '--disable=C0111,R0903'  # Missing docstring, too few public methods
-        files: ^plugins/
-
-  # ============================================================================
-  # Ansible Linting
-  # ============================================================================
-  - repo: https://github.com/ansible/ansible-lint
-    rev: v6.22.1
-    hooks:
-      - id: ansible-lint
-        args:
-          - '--config-file=.ansible-lint'
-          - '--force-color'
-          - '--profile=production'
-        files: \.(yaml|yml)$
-        exclude: |
-          (?x)^(
-            galaxy.yml|
-            changelogs/|
-            meta/runtime.yml
-          )$
-
-  # ============================================================================
-  # YAML Linting
-  # ============================================================================
-  - repo: https://github.com/adrienverge/yamllint
-    rev: v1.33.0
-    hooks:
-      - id: yamllint
-        args:
-          - '--config-file=.yamllint'
-        files: \.(yaml|yml)$
-
-  # ============================================================================
-  # Security Scanning - Secrets Detection
-  # ============================================================================
-  - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.4.0
-    hooks:
-      - id: detect-secrets
-        args:
-          - '--baseline'
-          - '.secrets.baseline'
-        exclude: |
-          (?x)^(
-            \.secrets\.baseline
-          )$
-
-  # ============================================================================
-  # GitLeaks - Additional Secrets Detection
+  # GitLeaks - Secrets Detection
   # ============================================================================
   - repo: https://github.com/gitleaks/gitleaks
     rev: v8.18.1
     hooks:
       - id: gitleaks
-
-  # ============================================================================
-  # Markdown Linting
-  # ============================================================================
-  - repo: https://github.com/markdownlint/markdownlint
-    rev: v0.12.0
-    hooks:
-      - id: markdownlint
-        args: ['--rules', '~MD013,~MD033']
-
-  # ============================================================================
-  # Python Security - Bandit
-  # ============================================================================
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.6
-    hooks:
-      - id: bandit
-        args: ['-c', '.bandit']
-        files: \.py$
-
-  # ============================================================================
-  # Collection Structure Validation
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: collection-structure
-        name: Collection Structure Check
-        entry: |
-          bash -c 'if [ ! -f galaxy.yml ]; then 
-            echo "❌ galaxy.yml not found"
-            exit 1
-          fi
-          required_dirs=("roles" "plugins")
-          for dir in "${required_dirs[@]}"; do 
-            if [ ! -d "$dir" ]; then 
-              echo "❌ Required directory not found: $dir"
-              exit 1
-            fi
-          done
-          echo "✅ Collection structure valid"'
-        language: system
-        pass_filenames: false
-        always_run: true
-
-  # ============================================================================
-  # Galaxy.yml Validation
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: galaxy-validation
-        name: Galaxy.yml Validation
-        entry: |
-          bash -c 'if [ -f galaxy.yml ]; then python3 -c "import yaml; yaml.safe_load(open(\"galaxy.yml\"))" || { echo "❌ Invalid galaxy.yml"; exit 1; }; fi'
-        language: system
-        files: ^galaxy\.yml$
-        pass_filenames: false
-
-  # ============================================================================
-  # Version Consistency Check
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: version-consistency
-        name: Version Consistency Check
-        entry: |
-          bash -c 'if [ -f galaxy.yml ]; then galaxy_version=$(grep "^version:" galaxy.yml | awk "{print \$2}"); echo "Galaxy version: $galaxy_version"; if [ -f CHANGELOG.rst ]; then if ! grep -q "$galaxy_version" CHANGELOG.rst; then echo "⚠️  WARNING: Version $galaxy_version not found in CHANGELOG.rst"; fi; fi; fi'
-        language: system
-        files: ^galaxy\.yml$
-        pass_filenames: false
-
-  # ============================================================================
-  # Role Naming Convention
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: role-naming
-        name: Role Naming Convention
-        entry: |
-          bash -c 'for f in "$@"; do if [[ "$f" =~ ^roles/([^/]+) ]]; then role_name="${BASH_REMATCH[1]}"; if [[ ! "$role_name" =~ ^[a-z][a-z0-9_]*$ ]]; then echo "❌ Invalid role name: $role_name"; echo "Must be lowercase, alphanumeric, underscores only"; exit 1; fi; fi; done'
-        language: system
-        files: ^roles/
-        pass_filenames: true
-
-  # ============================================================================
-  # Module Naming Convention
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: module-naming
-        name: Module Naming Convention
-        entry: |
-          bash -c 'for f in "$@"; do if [[ "$f" =~ plugins/modules/([^/]+)\.py$ ]]; then module_name="${BASH_REMATCH[1]}"; if [[ ! "$module_name" =~ ^[a-z][a-z0-9_]*$ ]]; then echo "❌ Invalid module name: $module_name"; echo "Must be lowercase, alphanumeric, underscores only"; exit 1; fi; fi; done'
-        language: system
-        files: ^plugins/modules/.*\.py$
-        pass_filenames: true
-
-  # ============================================================================
-  # Module Documentation Check
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: module-documentation
-        name: Module Documentation Check
-        entry: |
-          bash -c 'for f in "$@"; do if [[ "$f" == plugins/modules/*.py ]] && [[ "$f" != *__init__.py ]]; then if ! grep -q "DOCUMENTATION = " "$f"; then echo "⚠️  WARNING: Module missing DOCUMENTATION: $f"; fi; if ! grep -q "EXAMPLES = " "$f"; then echo "⚠️  WARNING: Module missing EXAMPLES: $f"; fi; if ! grep -q "RETURN = " "$f"; then echo "⚠️  WARNING: Module missing RETURN: $f"; fi; fi; done'
-        language: system
-        files: ^plugins/modules/.*\.py$
-        pass_filenames: true
-
-  # ============================================================================
-  # Molecule Test Existence Check
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: molecule-tests
-        name: Molecule Tests Check
-        entry: |
-          bash -c 'for role_dir in roles/*; do if [ -d "$role_dir" ] && [ ! -d "$role_dir/molecule" ]; then echo "⚠️  WARNING: Role $(basename $role_dir) has no molecule tests"; fi; done'
-        language: system
-        pass_filenames: false
-        always_run: true
-
-  # ============================================================================
-  # Idempotency Check
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: idempotency-check
-        name: Idempotency Check
-        entry: |
-          bash -c 'for f in "$@"; do if grep -E "shell:|command:|raw:" "$f" | grep -v "creates:\|removes:\|changed_when: false\|check_mode:" | grep -v "^#" | grep -v "molecule/"; then echo "⚠️  WARNING: Potentially non-idempotent task in $f"; echo "Consider using creates/removes or changed_when for shell/command"; fi; done'
-        language: system
-        files: ^roles/.*/tasks/.*\.yml$
-        pass_filenames: true
-
-  # ============================================================================
-  # FQCN Check (Fully Qualified Collection Names)
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: fqcn-check
-        name: FQCN Usage Check
-        entry: |
-          bash -c 'for f in "$@"; do if grep -E "^\s+[a-z_]+:\s*$" "$f" | grep -v "ansible.builtin\|myorg.custom_collection" | grep -v "^#" | grep -v "name:\|when:\|register:\|tags:"; then echo "⚠️  WARNING: Consider using FQCN in $f"; fi; done'
-        language: system
-        files: ^roles/.*/tasks/.*\.yml$
-        pass_filenames: true
-
-  # ============================================================================
-  # Constitutional Compliance
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: no-secrets
-        name: No Secrets in Collection
-        entry: |
-          bash -c 'echo "Checking for secrets..."
-          for f in "$@"; do 
-            if grep -iE "(password|secret|token|api[_-]?key):\s*[\"'\''][^{]" "$f" | grep -v "{{ " | grep -v "^#" | grep -v "_name:" | grep -v "description:" | grep -v "type:"; then 
-              echo "❌ VIOLATION: Plain secret found in $f"
-              echo "Constitution Article V: No secrets in Git"
-              exit 1
-            fi
-          done
-          echo "✅ No secrets detected"'
-        language: system
-        files: \.(yaml|yml|py)$
-        pass_filenames: true
-
-  # ============================================================================
-  # Documentation Check
-  # ============================================================================
-  - repo: local
-    hooks:
-      - id: readme-check
-        name: README Exists Check
-        entry: |
-          bash -c 'if [ ! -f README.md ]; then echo "❌ README.md not found"; exit 1; fi'
-        language: system
-        pass_filenames: false
-        always_run: true
-
-      - id: role-readme-check
-        name: Role README Check
-        entry: |
-          bash -c 'for role_dir in roles/*; do if [ -d "$role_dir" ] && [ ! -f "$role_dir/README.md" ]; then echo "⚠️  WARNING: Role $(basename $role_dir) has no README.md"; fi; done'
-        language: system
-        pass_filenames: false
-        always_run: true
