--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,7 @@ concurrency:
   cancel-in-progress: true
 
 on: # yamllint disable-line rule:truthy
+  push:
   pull_request:
     branches: [main]
   workflow_dispatch:
