modified:   .safety-policy.yml 	modified:   devfile.yaml 	modified:   docs/docsite/links.yml 	modified:   extensions/eda/rulebooks/rulebook.yml 	modified:   extensions/molecule/default/molecule.yml 	modified:   extensions/molecule/magic/converge.yml 	modified:   extensions/molecule/magic/molecule.yml 	modified:   extensions/molecule/utils/podman/playbooks/create.yml 	modified:   extensions/molecule/utils/podman/playbooks/destroy.yml 	modified:   extensions/molecule/utils/podman/playbooks/noop.yml 	modified:   extensions/molecule/utils/podman/playbooks/verify.yml 	modified:   extensions/molecule/utils/podman/vars/vars.yml 	modified:   extensions/molecule/webserver/converge.yml 	modified:   extensions/molecule/webserver/molecule.yml 	modified:   extensions/molecule/webserver/verify.yml 	modified:   galaxy.yml 	modified:   meta/runtime.yml 	modified:   plugins/filter/sample_filter.py 	modified:   plugins/lookup/sample_lookup.py 	modified:   plugins/modules/manage_service.py 	modified:   plugins/modules/sample_action.py 	modified:   plugins/modules/sample_module.py 	modified:   plugins/test/sample_test.py 	modified:   roles/database/defaults/main.yml 	modified:   roles/database/handlers/main.yml 	modified:   roles/database/meta/argument_specs.yml 	modified:   roles/database/meta/main.yml 	modified:   roles/database/tasks/main.yml 	modified:   roles/database/vars/main.yml 	modified:   roles/monitoring/defaults/main.yml 	modified:   roles/monitoring/handlers/main.yml 	modified:   roles/monitoring/meta/argument_specs.yml 	modified:   roles/monitoring/meta/main.yml 	modified:   roles/monitoring/tasks/main.yml 	modified:   roles/monitoring/vars/main.yml 	modified:   roles/run/defaults/main.yml 	modified:   roles/run/handlers/main.yml 	modified:   roles/run/meta/argument_specs.yml 	modified:   roles/run/meta/main.yml 	modified:   roles/run/molecule/centos/molecule.yml 	modified:   roles/run/molecule/default/converge.yml 	modified:   roles/run/molecule/default/create.yml 	modi

--- a/extensions/molecule/magic/converge.yml
+++ b/extensions/molecule/magic/converge.yml
@@ -4,5 +4,6 @@
   gather_facts: false
   tasks:
     - name: Print hello world
-      debug:
+      ansible.builtin.debug:
         msg: "hello world"
+...
