--- a/galaxy.yml
+++ b/galaxy.yml
@@ -15,10 +15,11 @@ license_file: LICENSE
 
 # TO-DO: update the tags based on your content type
 tags: ["linux", "tools"]
-
 # TO-DO: maintain this list to reflect the collection's dependencies
 dependencies:
   "ansible.utils": "*" # note: "*" selects the latest version available
+  "community.postgresql": "*"
+  "containers.podman": "*"
 
 repository: http://example.com/repository
 documentation: http://docs.example.com
@@ -38,3 +39,4 @@ build_ignore:
 # 'omit_default_directives' is a boolean that controls whether the default directives are used. Mutually exclusive
 # with 'build_ignore'
 # manifest: null
+...
