--- a/roles/webserver/handlers/main.yml
+++ b/roles/webserver/handlers/main.yml
@@ -1,19 +1,20 @@
 ---
 # handlers file for webserver
-- name: restart webserver
+- name: Restart webserver
   ansible.builtin.service:
     name: "{{ webserver_service }}"
     state: restarted
   become: true
 
-- name: reload webserver
+- name: Reload webserver
   ansible.builtin.service:
     name: "{{ webserver_service }}"
     state: reloaded
   become: true
 
-- name: check webserver config
+- name: Check webserver config
   ansible.builtin.command:
     cmd: "{{ webserver_config_validate.split()[0] }} -t"
   become: true
   changed_when: false
+...
