--- a/galaxy.yml
+++ b/galaxy.yml
@@ -8,7 +8,10 @@ name: "custom_collection"
 version: 1.0.0
 readme: README.md
 authors:
-  - your name <example@domain.com>
+  - David Danielsson
+  - David Igou
+  - Jeff Pullen
+  - Vinny Valdez
 
 description: your collection description
 license_file: LICENSE
@@ -21,10 +24,10 @@ dependencies:
   "community.postgresql": "*"
   "containers.podman": "*"
 
-repository: http://example.com/repository
-documentation: http://docs.example.com
-homepage: http://example.com
-issues: http://example.com/issue/tracker
+repository: https://github.com/djdanielsson/rh1-custom-collection
+documentation: https://github.com/djdanielsson/rh1-custom-collection/docs
+homepage: https://github.com/djdanielsson/rh1-custom-collection
+issues:https://github.com/djdanielsson/rh1-custom-collection/issue/tracker
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
