--- a/galaxy.yml
+++ b/galaxy.yml
@@ -3,8 +3,8 @@
 
 # See https://docs.ansible.com/ansible/latest/dev_guide/collections_galaxy_meta.html
 
-namespace: "myorg"
-name: "custom_collection"
+namespace: myorg
+name: custom_collection
 version: 1.0.0
 readme: README.md
 authors:
@@ -20,14 +20,14 @@ license_file: LICENSE
 tags: ["linux", "tools"]
 # TO-DO: maintain this list to reflect the collection's dependencies
 dependencies:
-  "ansible.utils": "*" # note: "*" selects the latest version available
+  "ansible.utils": "*"
   "community.postgresql": "*"
   "containers.podman": "*"
 
 repository: https://github.com/djdanielsson/rh1-custom-collection
 documentation: https://github.com/djdanielsson/rh1-custom-collection/docs
 homepage: https://github.com/djdanielsson/rh1-custom-collection
-issues:https://github.com/djdanielsson/rh1-custom-collection/issue/tracker
+issues: https://github.com/djdanielsson/rh1-custom-collection/issue/tracker
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
