modified:   galaxy.yml 	deleted:    roles/run/molecule/centos/molecule.yml 	deleted:    roles/run/molecule/default/converge.yml 	deleted:    roles/run/molecule/default/create.yml 	deleted:    roles/run/molecule/default/destroy.yml 	deleted:    roles/run/molecule/default/molecule.yml 	deleted:    roles/run/molecule/default/verify.yml 	deleted:    roles/run/molecule/ubuntu/molecule.yml 	deleted:    roles/webserver/molecule/default/converge.yml 	deleted:    roles/webserver/molecule/default/molecule.yml 	deleted:    roles/webserver/molecule/default/verify.yml

--- a/galaxy.yml
+++ b/galaxy.yml
@@ -20,7 +20,7 @@ license_file: LICENSE
 tags: ["linux", "tools"]
 # TO-DO: maintain this list to reflect the collection's dependencies
 dependencies:
-  "ansible.utils": "*"
+  "ansible.posix": "*"
   "community.postgresql": "*"
   "containers.podman": "*"
 
