--- a/galaxy.yml
+++ b/galaxy.yml
@@ -5,7 +5,7 @@
 
 namespace: myorg
 name: custom_collection
-version: 1.0.0
+version: 26.01.06.0-dev
 readme: README.md
 authors:
   - David Danielsson (@djdanielsson)
