--- a/.tekton/release.yml
+++ b/.tekton/release.yml
@@ -8,13 +8,13 @@ metadata:
     pipelinesascode.tekton.dev/task-3: "https://raw.githubusercontent.com/david-igou/tekton-ansible/refs/heads/main/task/ansible-molecule/molecule-task.yml"
     pipelinesascode.tekton.dev/task-4: "https://raw.githubusercontent.com/david-igou/tekton-ansible/refs/heads/main/task/ansible-galaxy-collection-publish/ansible-galaxy-collection-publish.yml"
     pipelinesascode.tekton.dev/on-event: "[push]"
-    pipelinesascode.tekton.dev/on-target-branch: "[refs/tags/1.*]"
+    pipelinesascode.tekton.dev/on-target-branch: "[refs/tags/*]"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
 spec:
   workspaces:
   - name: galaxy-credentials
     secret:
-      secretName: automationhub-credentials
+      secretName: galaxy-credentials
   - name: shared-workspace
     volumeClaimTemplate:
       spec:
@@ -66,7 +66,7 @@ spec:
 
       - name: ansible-galaxy-collection-publish
         runAfter:
-        - fetch-source
+        - molecule
         taskRef:
           name: ansible-galaxy-collection-publish
         params:
